[cicd] fix lint checks and added health & readiness handler
